--- a/app/assets/stylesheets/sections/_build.scss
+++ b/app/assets/stylesheets/sections/_build.scss
@@ -78,6 +78,14 @@ article.build {
         min-width: 62px;
       }
 
+      .unit-tests {
+        line-height: 78px;
+        font-size: 30px;
+        float: left;
+        padding: 0px 10px;
+        min-width: 62px;
+      }
+
       ol {
         height: 78px;
 
@@ -127,6 +135,11 @@ article.build {
         padding: 0px 10px;
       }
 
+      .unit-tests {
+        line-height: 73px;
+        padding: 0px 10px;
+      }
+
       ol {
         width: 195px;
 
@@ -170,6 +183,11 @@ article.build {
         padding: 0px 16px;
       }
 
+      .unit-tests {
+        line-height: 60px;
+        padding: 0px 16px;
+      }
+
       ol {
         width: 220px;
         margin-left: 35px;
@@ -202,6 +220,13 @@ article.build {
       }
 
       .time-since-last-build {
+        line-height: 33px;
+        font-size: 18px;
+        float: left;
+        padding: 0px 4px 0px 20px;
+      }
+
+      .unit-tests {
         line-height: 33px;
         font-size: 18px;
         float: left;
