Display Adjustments Increased limit for HTTP querying count

--- a/app/assets/stylesheets/sections/_projects.scss
+++ b/app/assets/stylesheets/sections/_projects.scss
@@ -38,7 +38,7 @@ $statusbar-font-size: 30px !default;
       .history {
         ol {
           overflow: hidden;
-          height: 80px;
+//          height: 80px;
           list-style: none;
 
           li {
