--- a/app/assets/stylesheets/sections/_build.scss
+++ b/app/assets/stylesheets/sections/_build.scss
@@ -59,38 +59,38 @@ article.build {
 .one-tile {
   article.build {
     h1 {
-      font-size: 200px;
-      line-height: 249px;
+      font-size: 150px;
+      line-height: 180px;
     }
 
     .last-build-label { display: none; }
 
     aside {
       > div {
-        height: 80px;
+        height: 60px;
+        padding-top: 10px;
       }
 
       .time-since-last-build {
-        line-height: 78px;
+        line-height: 68px;
         font-size: 30px;
         float: left;
-        padding: 0px 10px;
         min-width: 62px;
+        padding-left: 10px;
       }
 
       .unit-tests {
-        line-height: 78px;
-        font-size: 30px;
+        font-size: 25px;
         float: left;
-        padding: 0px 10px;
         min-width: 62px;
+        padding-left: 10px;
       }
 
       ol {
-        height: 78px;
+        height: 58px;
 
         li {
-          font-size: 50px;
+          font-size: 40px;
           height: 45px;
           width: 45px;
           margin: 14px 5px 7px 0px;
