--- a/app/assets/stylesheets/sections/_build.scss
+++ b/app/assets/stylesheets/sections/_build.scss
@@ -86,6 +86,11 @@ article.build {
         padding-left: 10px;
       }
 
+      .branch-name {
+        float: right!important;
+        padding-right: 2em;
+      }
+
       ol {
         height: 58px;
 
@@ -140,6 +145,11 @@ article.build {
         padding: 0px 10px;
       }
 
+      .branch-name {
+        float: right!important;
+        padding-right: 2em;
+      }
+
       ol {
         width: 195px;
 
@@ -188,6 +198,11 @@ article.build {
         padding: 0px 16px;
       }
 
+      .branch-name {
+        float: right!important;
+        padding-right: 2em;
+      }
+
       ol {
         width: 220px;
         margin-left: 35px;
@@ -231,6 +246,11 @@ article.build {
         font-size: 18px;
         float: left;
         padding: 0px 4px 0px 20px;
+      }
+
+      .branch-name {
+        float: right!important;
+        padding-right: 2em;
       }
 
       ol {
