--- a/app/assets/stylesheets/sections/_build.scss
+++ b/app/assets/stylesheets/sections/_build.scss
@@ -88,7 +88,8 @@ article.build {
 
       .branch-name {
         float: right!important;
-        padding-right: 2em;
+        padding-right: 31px;
+        font-size: 20px;
       }
 
       ol {
@@ -147,7 +148,8 @@ article.build {
 
       .branch-name {
         float: right!important;
-        padding-right: 2em;
+        padding-right: 31px;
+        font-size: 20px;
       }
 
       ol {
@@ -200,7 +202,8 @@ article.build {
 
       .branch-name {
         float: right!important;
-        padding-right: 2em;
+        padding-right: 31px;
+        font-size: 20px;
       }
 
       ol {
@@ -250,7 +253,8 @@ article.build {
 
       .branch-name {
         float: right!important;
-        padding-right: 2em;
+        padding-right: 31px;
+        font-size: 20px;
       }
 
       ol {
